--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ html{
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.6rem;
+    margin: 0;
+    padding: 0;
     font-weight: 400;
     background-color: #fff;
     color: #000;
@@ -85,7 +87,7 @@ li{
 }
 .nav{
     color: rgb(255, 255, 255);
-    padding: 1.6rem 0;
+    padding: 1.6rem 22px;
 }
 .nav.fix-nav{
     position: fixed;
@@ -115,6 +117,7 @@ display: none;
 }
 .nav-list{
     display: flex;
+    margin-right: 30px;
     align-items: center;
 }
 .nav-item:not(:last-child){
@@ -686,7 +689,7 @@ font-weight: 400;
             display: block;
             position: absolute;
            padding: 10px 10px;
-           margin: 0px 10px;
+           margin: 50px 10px;
            cursor: pointer;
            -webkit-animation: spin 3s linear infinite;
            -moz-animation: spin 3s linear infinite;
@@ -713,7 +716,8 @@ font-weight: 400;
             border-radius: 10px;
         }
         .open-seting i{
-            margin: 0px 4px;
+            margin: 5px 0;
+           margin-left: 30px;
         }
         .open-seting i:hover{
             color: #ff9050
